--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main-options.tsx"></script>
+    <script type="module" src="/src/main-popup.tsx"></script>
   </body>
 </html>
